Converted to processbuilder for running on linux, now using the environment variables for executables and other environment paths